--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
     release:
       name: Publish
       runs-on: ubuntu-latest
-      if: startsWith(github.ref, 'refs/tags/v') && github.event.workflow_run.conclusion == 'success'
+      if: github.event.workflow_run.conclusion == 'success'
       timeout-minutes: 10
       steps:
       - name: Checkout code
