purposefully failing test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,3 +11,7 @@ jobs:
             - name: Testing
               run: |
                   echo "Running tests"
+            - name: Fail
+              run: |
+                  echo "Failing"
+                  exit 1
