--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,13 @@ jobs:
       steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Check Version
+        run: |
+          echo "Checking version"
+          echo "Version: ${{ github.event.workflow_run.conclusion }}"
+          echo "Git Version Tag: ${{ github.event.workflow_run.head_commit.message }}"
+
       - name: Publish
         run: |
           echo "Publishing"
+     
