--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 name: Deploy
 on:
-    workflow_run:
+    workflow_run: # Is Only Triggered on the main Branch
         workflows: ["Tests"]
         types:
           - completed
