--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,10 +8,14 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Testing
-              run: |
-                  echo "Running tests"
-            # - name: Fail
-            #   run: |
-            #       echo "Failing"
-            #       exit 1
+            - name: Checkout code
+              uses: actions/checkout@v4
+          
+            - name: Set up Rust
+              uses: dtolnay/rust-toolchain@stable
+              with:
+                toolchain: stable
+                
+            - name: Run tests
+              run: cargo test
+                
