--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
+[registries]
+staging = { index = "https://github.com/rust-lang/staging.crates.io-index" }
