--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,19 +10,13 @@ permissions:
   
 jobs:
   tests:
-    name: Run tests
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Rust
-      uses: dtolnay/rust-toolchain@stable
-      with:
-        toolchain: stable
-
-    - name: Run tests
-      run: cargo test
+        runs-on: ubuntu-latest
+        steps:
+          - uses: actions/checkout@v4
+          - name: Install nightly
+            run: rustup toolchain add --component=rustfmt nightly
+          - name: Checks
+            run: ./ci.sh
 
   release:
     name: Publish to crates.io
