--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,5 +11,5 @@ jobs:
           - name: Install nightly
             run: rustup toolchain add --component=rustfmt nightly
           - name: Checks
-            run: ./ci.sh
+            run: bash ./ci.sh
                 
