--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ci_playground"
 version = "0.4.0"
 edition = "2021"
-
+description = "A playground for learning CI/CD and publishing packages to crates.io"
+license = "MIT"
 [dependencies]
 
