--- a/.github/workflows/bloat.yml
+++ b/.github/workflows/bloat.yml
@@ -28,7 +28,7 @@ jobs:
               uses: marocchino/sticky-pull-request-comment@v2
               with:
                 hide_and_recreate: true
-                header: ESP32 Bloat Report
+                header: Bloat Report
                 message: |
                     \`\`\`
                     $(cargo bloat --release --crates)
