testing out /test functionality

--- a/.github/workflows/bloat.yml
+++ b/.github/workflows/bloat.yml
@@ -4,14 +4,14 @@ on:
   pull_request:
     types: [opened]
   issue_comment:
-    types: [created]
+    types: [created, edited, deleted]
 
 permissions:
   pull-requests: write
 
 jobs:
     cargo_bloat:
-        if: contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/bloat')    # check if the comments come from pull request, exclude those from issue.
+        if: contains(github.event.comment.html_url, '/pull/') || contains(github.event.comment.body, '/bloat')    # check if the comments come from pull request, exclude those from issue.
         name: Cargo Bloat
         runs-on: ubuntu-latest
         steps:
