messing around with if statements

--- a/.github/workflows/bloat.yml
+++ b/.github/workflows/bloat.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
     cargo_bloat:
-        if: contains(github.event.comment.html_url, '/pull/') || contains(github.event.comment.body, '/bloat')    # check if the comments come from pull request, exclude those from issue.
+        if: contains(github.event.comment.body, '/bloat')    # check if the comments come from pull request, exclude those from issue.
         name: Cargo Bloat
         runs-on: ubuntu-latest
         steps:
