get rid of if statements

--- a/.github/workflows/bloat.yml
+++ b/.github/workflows/bloat.yml
@@ -2,16 +2,16 @@ name: Bloat
 
 on:
   pull_request:
-    types: [opened]
-  issue_comment:
-    types: [created, edited, deleted]
+  #   types: [opened]
+  # issue_comment:
+  #   types: [created, edited, deleted]
 
 permissions:
   pull-requests: write
 
 jobs:
     cargo_bloat:
-        if: contains(github.event.comment.body, '/bloat')    # check if the comments come from pull request, exclude those from issue.
+        # if: contains(github.event.comment.body, '/bloat')    # check if the comments come from pull request, exclude those from issue.
         name: Cargo Bloat
         runs-on: ubuntu-latest
         steps:
