git diff errors

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -29,3 +29,4 @@ REPOSITORY_CHECKOV_DISABLE_ERRORS: true
 GIT_GIT_DIFF_DISABLE_ERRORS: true
 YAML_YAMLLINT_DISABLE_ERRORS: true
 ACTION_ACTIONLINT_DISABLE_ERRORS: true
+REPOSITORY_GIT_DIFF_DISABLE_ERRORS: true
