--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -34,7 +34,9 @@ env:
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
   cancel-in-progress: true
-
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   megalinter:
     name: MegaLinter
