--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -32,3 +32,4 @@ ACTION_ACTIONLINT_DISABLE_ERRORS: true
 REPOSITORY_GIT_DIFF_DISABLE_ERRORS: true
 MARKDOWN_MARKDOWNLINT_FILE_EXTENSIONS:
 - "**/*.md"
+REPOSITORY_TRUFFLEHOG_DISABLE_ERRORS: true
