--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -31,5 +31,6 @@ YAML_YAMLLINT_DISABLE_ERRORS: true
 ACTION_ACTIONLINT_DISABLE_ERRORS: true
 REPOSITORY_GIT_DIFF_DISABLE_ERRORS: true
 MARKDOWN_MARKDOWNLINT_FILE_EXTENSIONS:
-  - "**/*.md"
+- "**/*.md"
 REPOSITORY_TRUFFLEHOG_DISABLE_ERRORS: true
+DEFAULT_BRANCH: main
