--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -8,7 +8,9 @@ name: MegaLinter
 on:
   # Comment this line to trigger action only on pull-requests
   # (not recommended if you don't pay for GH Actions)
-
+  push:
+    branches:
+      - '*'
   pull_request:
     branches:
       - main
