--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -30,6 +30,5 @@ GIT_GIT_DIFF_DISABLE_ERRORS: true
 YAML_YAMLLINT_DISABLE_ERRORS: true
 ACTION_ACTIONLINT_DISABLE_ERRORS: true
 REPOSITORY_GIT_DIFF_DISABLE_ERRORS: true
-MARKDOWN_MARKDOWNLINT_FILE_EXTENSIONS:
-- "**/*.md"
+MARKDOWN_MARKDOWNLINT_FILTER_REGEX_INCLUDE: "**/*.md"
 REPOSITORY_TRUFFLEHOG_DISABLE_ERRORS: true
