--- a/.github/workflows/plantuml embedder.yml
+++ b/.github/workflows/plantuml embedder.yml
@@ -1,15 +1,12 @@
-name: 'Plantuml for markdown'
-description: 'Embed planutml diagrams inside markdown files'
-runs:
-  using: "composite"
-  steps:
-    - name: Setting up node
-      uses: actions/setup-node@v1
+on:
+  push:
+    - main
+jobs:
+  embed-puml-markdown:
+  uses: ubuntu-latest
+    - name: Check out the repo
+      uses: actions/checkout@v2
       with:
-        node-version: '16'
-    - name: Add plantuml for markdown
-      run: npm i -g puml-for-markdown
-      shell: bash
-    - name: Embed plantuml in markdown
-      run: puml-for-markdown
-      shell: bash
+        fetch-depth: 0
+    - name: Embed PlantUML inside Markdown
+      uses: alessandro-marcantoni/puml-markdown@v0.1.1
