--- a/.github/workflows/plantuml embedder.yml
+++ b/.github/workflows/plantuml embedder.yml
@@ -1,13 +1,14 @@
 on:
   push:
-    - main
+    branches:
+    - "*"
 jobs:
   embed-puml-markdown:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Check out the repo
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Embed PlantUML inside Markdown
-      uses: alessandro-marcantoni/puml-markdown@v0.1.1
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Embed PlantUML inside Markdown
+        uses: alessandro-marcantoni/puml-markdown@v0.1.1
