checking if PR functionality works

--- a/.mega-linter.yaml
+++ b/.mega-linter.yaml
@@ -13,7 +13,7 @@ APPLY_FIXES: all
 
 # If you use ENABLE_LINTERS variable, all other linters will be disabled by default
 ENABLE_LINTERS:
-  - ACTION_ACTIONLINT
+  # - ACTION_ACTIONLINT
   # - RUST_CLIPPY
   - MARKDOWN_MARKDOWNLINT
   # - MARKDOWN_MARKDOWN_LINK_CHECK
