--- a/.github/workflows/dependabot.yaml
+++ b/.github/workflows/dependabot.yaml
@@ -5,12 +5,20 @@
         branches:
           - main
     jobs:
-      auto-merge:
+      # auto-merge:
+      #   runs-on: ubuntu-latest
+      #   steps:
+      #     - uses: actions/checkout@v4
+      #     - uses: ahmadnassri/action-dependabot-auto-merge@v2
+      #       with:
+      #         target: minor
+      #         github-token: ${{ secrets.dependabot }}
+      automerge:
         runs-on: ubuntu-latest
-        steps:
-          - uses: actions/checkout@v4
-          - uses: ahmadnassri/action-dependabot-auto-merge@v2
-            with:
-              target: minor
-              github-token: ${{ secrets.dependabot }}
     
+        permissions:
+          pull-requests: write
+          contents: write
+    
+        steps:
+          - uses: fastify/github-action-merge-dependabot@v3
